--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^20.4.2",
     "@types/webpack": "^5.28.1",
+    "html-webpack-plugin": "^5.5.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
