Feature-Sliced Design. Implementation of the basics.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "jsx": "react-jsx",
     // Ползволяет компилятору обрабаывать не только ts файлы, но и js.
     "allowJs": true,
+    // Абсолютные пути
+    "baseUrl": ".",
+    "paths" : {
+      "*": ["./src/*"]
+    },
     // Определяет то, какие импорты будут.
     "moduleResolution": "node",
     // Добовляет поддержку дефолтных импортов.
