React Testing Library. Component tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,12 @@
       // Указываем модульную систему компиляции для ts-node
       "module": "CommonJS"
     }
-  }
+  },
+  "include": [
+    "./config/**/*.ts",
+    "./config/**/*.tsx",
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./webpack.config.ts"
+  ]
 }
