--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,12 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: CI Testing
+run-name: ${{ github.actor }} test
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
-  Explore-GitHub-Actions:
+  pipeline:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
